Added refresh token endpoint
